# Cook-n-Cart

./: .gitignore  LICENSE  README.md  add_products_widget.py  add_recipe_widget.py  apkBuild.sh  app.py  buildapk.sh  controllers.py  cookncart_ui.py  database.py  error_handler.py  main.py  models.py  pyproject.toml  pysidedeploy.spec  qml.py  repositories.py  requirements.txt  root_controllers.py  root_database.py  root_models.py  root_repositories.py  setup.py  styles.css  views.py  views_asetukset_page.py  views_main_window.py  views_ostoslistat_page.py  views_reseptit_page.py  views_tuotteet_page.py  widgets_add_categories_widget.py  widgets_add_products_widget.py  widgets_add_recipe_widget.py  widgets_add_shoplist_widget.py  widgets_add_tags_widget.py  widgets_conversion_service.py  widgets_edit_product_widget.py  widgets_edit_recipe_widget.py  widgets_import_recipe_widget.py  (+5 more)
cookncart/: __init__.py  controllers.py  database.py  main.py  models.py  repositories.py
tests/: combine_all.py  combine_views_and_widgets.py  count_rows.py  create_db.py  database_test.py  db_struct.py  dir_struct.py  generate_pyenv_cfg.py  insert_into_ostoslistat.py  insert_into_products.py  insert_into_recipes.py
utils/: config.json  cook_and_cart.db  styles.qss
views/: asetukset_page.py  main_window.py  ostoslistat_page.py  products_page.py  reseptit_page.py  tuotteet_page.py
whl/: shiboken6-6.8.0.2-6.8.0-cp311-cp311-android_aarch64.whl  shiboken6-6.8.0.2-6.8.0-cp311-cp311-android_x86_64.whl
widgets/: add_products_widget.py  add_recipe_widget.py  add_shoplist_widget.py  (+7 more)
(+55 files in other folders)
