[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cook-n-Cart"
version = "0.1.0"
description = "Cook-n-Cart application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8.0"
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
cookncart = "main:main"
